--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,3 +20,9 @@ img {
   display: flex;
   justify-content: center;
 }
+
+.centered {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
